fix: not cards missing border radius
Fixes cards often missing the intended border radius on account of a custom property being set incorrectly.

Also adds a bottom margin to `NavTabs` as the double-border issue would now look particularly bad.

--- a/src/assets/styles/_components.scss
+++ b/src/assets/styles/_components.scss
@@ -6,7 +6,7 @@ To be used in places where we solely need KCard’s frame properties.
 
 .kcard-border {
   border: var(--KCardBorder);
-  border-radius: --KCardBorderRadius;
+  border-radius: var(--KCardBorderRadius);
   background-color: var(--KCardBackground);
 }
 
